<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".gameDetail" android:id="@+id/frameLayout">
    <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/gameDetailImage" app:layout_constraintEnd_toStartOf="@+id/guideline3"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="108dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo" app:layout_constraintHorizontal_bias="0.4"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:text="@string/game_info"
            android:textSize="36sp" android:textColor="#00BCD4" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="28dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="122dp" android:layout_marginStart="122dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="122dp"
            android:layout_marginRight="122dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/nb_players"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGameInfoShort"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textGameInfoShort3"
            app:layout_constraintStart_toEndOf="@+id/gameDetailImage" android:textStyle="bold"/>
    <TextView
            android:text="@string/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGameInfoShort4"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textGameInfoShort"
            app:layout_constraintStart_toEndOf="@+id/gameDetailImage" android:textStyle="bold"/>
    <TextView
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGameInfoShort3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textGameInfoShort2"
            app:layout_constraintStart_toEndOf="@+id/gameDetailImage" android:textStyle="bold"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGameInfoShort2"
            app:layout_constraintStart_toEndOf="@+id/gameDetailImage"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/gameDetailImage" android:textStyle="bold"/>
    <TextView
            android:text="@string/game_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textGameInfoLong" android:layout_marginEnd="29dp" android:layout_marginRight="29dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="29dp" android:layout_marginStart="29dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/gameDetailImage"/>
    <Button
            android:text="@string/do_you_want_to_know_more"
            android:layout_width="251dp"
            android:layout_height="49dp"
            android:id="@+id/knowMoreButton" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textGameInfoLong" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="87dp" android:layout_marginRight="87dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="87dp"
            android:layout_marginStart="87dp"/>
    <TextView
            android:text="@string/name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameValueView" app:layout_constraintStart_toEndOf="@+id/textGameInfoShort2"
            android:layout_marginLeft="4dp" android:layout_marginStart="4dp"
            app:layout_constraintTop_toTopOf="@+id/textGameInfoShort2"/>
    <TextView
            android:text="@string/type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeValueView" app:layout_constraintStart_toEndOf="@+id/textGameInfoShort3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textGameInfoShort3"/>
    <TextView
            android:text="@string/nb_players_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nbPlayersValueView" app:layout_constraintStart_toEndOf="@+id/textGameInfoShort"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textGameInfoShort"/>
    <TextView
            android:text="@string/year_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearValueView" app:layout_constraintStart_toEndOf="@+id/textGameInfoShort4"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/textGameInfoShort4"/>
</android.support.constraint.ConstraintLayout>